[gd_scene load_steps=6 format=3 uid="uid://dbocyo1h040nc"]

[ext_resource type="Script" path="res://scripts/boundaries.gd" id="1_e7ne5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j272f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axdu0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1f3m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_301mh"]

[node name="Boundaries" type="Node2D"]
script = ExtResource("1_e7ne5")
boundary_tickness = 10.0

[node name="BoundaryTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryTop"]
shape = SubResource("RectangleShape2D_j272f")

[node name="BoundaryBottom" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBottom"]
shape = SubResource("RectangleShape2D_axdu0")

[node name="BoundaryLeft" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryLeft"]
shape = SubResource("RectangleShape2D_r1f3m")

[node name="BoundaryRight" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryRight"]
shape = SubResource("RectangleShape2D_301mh")
